--- a/styles/sass/style.scss
+++ b/styles/sass/style.scss
@@ -2,5 +2,6 @@
 @import "./partials/globalStyles";
 @import "./partials/header";
 @import "./partials/nav";
-@import "./partials/mediaQueries"
+@import "./partials/upcomingEvents";
+@import "./partials/mediaQueries";
 
