--- a/styles/sass/partials/_globalStyles.scss
+++ b/styles/sass/partials/_globalStyles.scss
@@ -4,17 +4,18 @@
 }
 
 .wrapper {
-    max-width: 1280px;
+    max-width: 1780px;
     width: 90%;
     margin: 0 auto;
 }
 
-html {
+html,
+body {
     font-size: 125%;
 }
 body {
     font-family: 'Roboto Serif', sans-serif;
-    font-size: clamp(0.5rem, 2vw, 3rem);
+    font-size: clamp(1rem, 2vw, 3rem);
     background-color: rgb(103, 204, 240);
 }
 
@@ -30,15 +31,31 @@ a {
     color: purple;
     text-decoration: none;
     text-align: center;
-   
 }
 
 li a:hover {
     color: salmon;
-  
+}
+
+h2 {
+    color: purple;
+    padding: 55px 0;
+}
+
+h3 {
+    padding: 20px
+}
+
+p {
+    padding: 20px;
+    line-height: 1.85rem;
 }
 
 .menu-checkbox {
     display: none;
 }
 
+img {
+    display:block;
+    width: 100%;
+}
