flex-wrap for logos

--- a/styles/style.css
+++ b/styles/style.css
@@ -365,6 +365,7 @@ img {
 .sponsorLogos {
   display: flex;
   flex-direction: row;
+  flex-wrap: wrap;
   -o-object-fit: cover;
      object-fit: cover;
 }
